kubernetes/cryptobot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-container
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-container
  strategy: {}
  template:
    metadata:
      labels:
        app: api-container
    spec:
      containers:
        - image: johanngump/cryptobot-web-api:test-1
          name: web-api
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /log
              name: log-data
      volumes:
        - name: log-data
          persistentVolumeClaim:
            claimName: log-data        
      restartPolicy: Always
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c-predict
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: c-predict
  template:
    metadata:
      labels:
        app: c-predict
    spec:
      containers:
        - image: mlops23cryptobot/model-serve
          name: c-predict
          ports:
            - containerPort: 8501
              hostPort: 8501
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /models
              name: model-fit
      restartPolicy: Always
      volumes:
        - name: model-fit
          persistentVolumeClaim:
            claimName: model-fit
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: db-secrets
          image: mysql:latest
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: db
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          resources: {}
          securityContext:
            capabilities:
              add:
                - SYS_NICE
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: klines-data
      restartPolicy: Always
      volumes:
        - name: klines-data
          persistentVolumeClaim:
            claimName: klines-data
status: {}
