kubernetes/cryptobot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-container
  namespace: default
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: api-container
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: c-predict
  namespace: default
spec:
  ports:
    - name: "8501"
      port: 8501
      targetPort: 8501
  selector:
    app: c-predict
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: db
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80
  type: LoadBalancer
