kubernetes/cryptobot-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: api-ingress
# spec:
#   defaultBackend:
#     service:
#       name: api-container
#       port:
#         number: 8000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptobot-ingress
  namespace: shopdefault
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - localhost
    secretName: secret-name
  rules:
  - host: localhost
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: api-svc-bridge
            port:
              number: 80
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-svc-bridge
            port:
              number: 80
